@@ -6,6 +6,7 @@
 	* CP_Map.krauses
 	* Superoperator.H and CP_Map.H to create adjoint channel
 	* TensorSubspace multiplication and H
+	* better use of NotImplemented for array ops
 
 === qitensor-0.11 (Dan Stahlke, 2013-05-11) ===
 	* superoperators module
